# Auta

./: Auto.cpp  Auto.h  CMakeLists.txt  Datum.cpp  Datum.h  Marka.cpp  Marka.h  MojeAuto.cpp  MojeAuto.h  main.cpp
