cmake_minimum_required(VERSION 3.26)
project(Auta)

set(CMAKE_CXX_STANDARD 17)

add_executable(Auta main.cpp

        Datum.h
        Datum.cpp
        Datum.cpp
        Marka.h
        Marka.h
        Marka.cpp
        Auto.h
        Auto.h
        Auto.cpp
        MojeAuto.h
        MojeAuto.h
        MojeAuto.cpp
        MojeAuto.cpp)
